--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,13 @@
 ja:
+  activerecord:
+    attributes:
+      board:
+        name: 名前
+        title: タイトル
+        body: 本文
+      comment:
+        name: 名前
+        comment: コメント
   views:
     pagination:
       first: "最初"
